--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApiSettings": {
-    "BaseUrl": "https://localhost:7157"
+    "BaseUrl": "https://apicomederopet.onrender.com/api/"
   },
   "Logging": {
     "LogLevel": {
